service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world
  namespace: hello-world
spec:
  selector:
    app: hello-world
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
